Fixed sm lil small spacing and spelling errors

--- a/css/styles.css
+++ b/css/styles.css
@@ -252,7 +252,7 @@ a {
 }
 .image1earlydevelopmenttext{
     position: absolute;
-    top: 1250px;
+    top: 1235px;
     left: 90px;
     font-size: 16px;
     font-weight: 200;
